apache-check-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: checkapps
  labels:
    app.kubernetes.io/name: checkapps
    app.kubernetes.io/instance: checkapps

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: checkapps
spec:
  selector:
    matchLabels:
      app: apache-deployment
  replicas: 2
  template:
    metadata:
      labels:
        app: apache-deployment
    spec:
      containers:
        - name: apache-deployment
          image: apache/apache2:3.3
          ports:
            - containerPort: 8081
          imagePullPolicy: Never
