apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
spec:
  selector:
    matchLabels:
      app: apache-deployment
  replicas: 2
  template:
    metadata:
      labels:
        app: apache-deployment
    spec:
      containers:
        - name: apache-deployment
          image: apache/apache2
          ports:
            - containerPort: 8081
          imagePullPolicy: Never
