apache-check-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-deployment-service
  namespace: checkapps
spec:
  selector:
    app: apache-deployment
  #type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 8082 
      targetPort: 8081
      #nodePort: 31000
