apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-deployment-service
spec:
  selector:
    app: apache-deployment
  type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 80
      nodePort: 31000
