helloingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-path-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /raunak
        pathType: Prefix
        backend:
          service:
            name: apache-deployment-service
            port:
              number: 8082
