ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: nealkube.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: apache-deployment-service
            port:
              number: 8082
